--- a/web-page/ratchaneegorn-webpage/appoint.html
+++ b/web-page/ratchaneegorn-webpage/appoint.html
@@ -32,16 +32,13 @@
                 </div>  
                 <script>
                 function myFunction() {
-                    alert("กรุณารอรับ E-mail ตอบกลับเพื่อยืนยันการยกเลิกนัด");
+                    alert("กรุณารอรับ Email ตอบกลับเพื่อยืนยันการยกเลิกนัด");
                 }
                 </script>
             </div>
-            <form>
-                <div class="card-button">
-                <button  id="back" style="color: white;" formaction="menu.html">กลับ</button>
+                <div class="back-button">
+                    <a id="back" class="hover-button" style="color: white; float: right;" href="menu.html">กลับ</a>
                 </div> 
-            </form>
-            
         </div>
     </div>
 </body>
