--- a/web-page/ratchaneegorn-webpage/calendar.html
+++ b/web-page/ratchaneegorn-webpage/calendar.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ปฏิทินวันทำการ-ระบบนัดหมายหน่วยปฐมภูมินักศึกษา123 มหาวิทยาลัยขอนแก่น</title>
     <link rel="stylesheet" href="style/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Mitr&family=Prompt&display=swap" rel="stylesheet">
-</head><body>
+</head>
+
+<body>
     <p id="lanChange">TH|EN</p>
     <div class="user-action">
-        <span style="color: white;">Ratchaneegorn  </span>
+        <span style="color: white;">Ratchaneegorn </span>
         <button id="logout" style="color: white;">ออกจากระบบ</button>
     </div>
     <div id="container">
-        <div class="headText">ระบบนัดหมายหน่วยปฐมภูมินักศึกษา123 มหาวิทยาลัยขอนแก่น</div> 
-        <div class="text">ปฏิทินวันทำการ</div> 
-    <div id="container-calendar">
-        <p>this is calendar</p>
-    </div>
-    <form>
+        <div class="headText">ระบบนัดหมายหน่วยปฐมภูมินักศึกษา123 มหาวิทยาลัยขอนแก่น</div>
+        <div class="text">ปฏิทินวันทำการ</div>
+        <div id="container-calendar">
+            <div class="this-calendar">
+               <p>this is calendar</p>
+               <p></p> 
+            </div>
+            <div class="next-button">
+                <a id="next" class="hover-button" style="color: white;" href="inform.html">ต่อไป</a>
+            </div>
+        </div>
         <div class="card-button">
-        <button  id="back" style="color: white;" formaction="menu.html">กลับ</button>
-        </div> 
-    </form>
+            <a id="back" class="hover-button" style="color: white; float: right;" href="menu.html">กลับ</a>
+        </div>
 </body>
+
 </html>
