--- a/web-page/ratchaneegorn-webpage/menu.html
+++ b/web-page/ratchaneegorn-webpage/menu.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ระบบนัดหมายหน่วยปฐมภูมินักศึกษา123 มหาวิทยาลัยขอนแก่น</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/styleresponsive.css">
     <link href="https://fonts.googleapis.com/css2?family=Mitr&family=Prompt&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -17,28 +18,13 @@
         <div class="headText">ระบบนัดหมายหน่วยปฐมภูมินักศึกษา123 มหาวิทยาลัยขอนแก่น</div> 
         <div class="text">กรุณาเลือกทำรายการ</div> 
         <div class="card-container">
-            <form>
-                <button class="card-book" formaction="calendar.html">
-                <!-- <a id="link-calendar" href="calendar.html"></a> -->
-                <div>
-                    <img src="image/calendar.jpg">
-                </div>
-                <div>
-                    <p id="selectDay">จองคิว</p>
-                </div>
-            </button>
-            </form>
-            <form>
-            <button class="card-check" formaction="appoint.html">
-                <div>
-                    <img src="image/glass.jpg">
-                </div>
-                <div>
-                    <p id="tabelDay">ตารางนัด</p> 
-                </div>
-            </button>
-            </form>
-        <div>
+            <div><a class="card-book" href="calendar.html">
+                <div><img src="image/calendar.jpg"></div>
+                <div><p id="selectDay">จองคิว</p> </div> </a></div>
+            <div><a class="card-check" href="appoint.html" >
+                <div><img src="image/glass.jpg"></div>
+                <div> <p id="tabelDay">ตารางนัด</p> </div></a></div>
+        </div>
     </div>
 </body>
 </html>
