--- a/web-page/ratchaneegorn-webpage/map.html
+++ b/web-page/ratchaneegorn-webpage/map.html
@@ -7,41 +7,39 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/styleresponsive.css">
     <link href="https://fonts.googleapis.com/css2?family=Mitr&family=Prompt&display=swap" rel="stylesheet">
-    <style>
-        #map {
-            height: 100%;
-            width: 100%;
-            margin: 20px;
-            padding: 30px;
-        }
-        #container-map {
-            height: 400px;
-            width: 70%;
-            display: flex;
-            flex-direction: row;
-        }
-        #location:last-child {
-            width: 400px;
-        }
-    </style>
+   
 </head>
 <body>
-    <div id="container-map">
-        <div id="map"></div>
-        <div id="location">
-            <p>เลือกสถานที่</p>
-        </div>
+    <p id="lanChange">TH|EN</p>
+    <div class="user-action">
+        <span style="color: white;">Ratchaneegorn </span>
+        <button id="logout" style="color: white;">ออกจากระบบ</button>
     </div>
-    <script>
-        var map;
-        function initMap() {
-            map = new google.maps.Map(document.getElementById('map'), {
-                center: {lat: 13.7442, lng: 100.4608},
-                zoom: 8
-            });
-        }
-    </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXDkAW3HYyb_9huOH8R-1StLky9IdKVrc&callback=initMap"
-    async defer></script>
+    <div id="container">
+        <div class="headText">ระบบนัดหมายหน่วยปฐมภูมินักศึกษา123 มหาวิทยาลัยขอนแก่น</div>
+        <div id="container-map">
+                <div id="map"></div>
+                <div class="location">
+                    <select>
+                        <option value="0">เลือกสถานที่</option>
+                        <option value="1">หน่วยปฐมภูมิที่ 1 หลังคอมเพล็ก</option>
+                        <option value="2">หน่วยปฐมภูมิที่ 2 หอแปดหลัง</option>
+                        <option value="3">หน่วยปฐมภูมิที่ 3 บึงศรีฐาน</option>
+                    </select>
+                    <button id="back-bt" style="color: white;" href="appoint.html">กลับ</button>
+                </div>    
+        </div>
+            <script>
+                var map;
+                function initMap() {
+                    map = new google.maps.Map(document.getElementById('map'), {
+                        center: {lat: 13.7442, lng: 100.4608},
+                        zoom: 8
+                    });
+                }
+            </script>
+            <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXDkAW3HYyb_9huOH8R-1StLky9IdKVrc&callback=initMap"
+            async defer></script>
+    </div>
 </body>
 </html>
