--- a/web-page/ratchaneegorn-webpage/menu.html
+++ b/web-page/ratchaneegorn-webpage/menu.html
@@ -11,8 +11,8 @@
 <body>
     <p id="lanChange">TH|EN</p>
     <div class="user-action">
-        <span style="color: white;">Ratchaneegorn  </span>
-        <button id="logout" style="color: white;">ออกจากระบบ</button>
+        <button id="login">Sign in</button>
+        <button id="logout">Sign Out</button>
     </div>
     <div id="container">
         <div class="headText">ระบบนัดหมายหน่วยปฐมภูมินักศึกษา123 มหาวิทยาลัยขอนแก่น</div> 
@@ -26,5 +26,9 @@
                 <div> <p id="tabelDay">ตารางนัด</p> </div></a></div>
         </div>
     </div>
+    <script>
+        var authorizeButton = document.getElementById('login');
+        var signoutButton = document.getElementById('logout');
+    </script>
 </body>
 </html>
