--- a/web-page/ratchaneegorn-webpage/login-01.html
+++ b/web-page/ratchaneegorn-webpage/login-01.html
@@ -4,7 +4,7 @@
     <title>Login with Google Account using Javascript</title>
     <meta charset="utf-8">
     <script src="https://apis.google.com/js/client:platform.js?onload=renderButton" async defer></script>
-    <meta name="google-signin-client_id" content="331764559247-ftcl715nc9aer5fipkjg1k638539pbg3.apps.googleusercontent.com">
+        <meta name="google-signin-client_id" content="331764559247-vo0g3vm26qlkcu3dim0vljmp08990tgk.apps.googleusercontent.com">
 
 <script>
     // Render Google Sign-in button
@@ -22,8 +22,7 @@
 // Sign-in success callback
 function onSuccess(googleUser) {
     // Get the Google profile data (basic)
-    //var profile = googleUser.getBasicProfile();
-    
+    // var profile = googleUser.getBasicProfile();
     // Retrieve the Google account data
     gapi.client.load('oauth2', 'v2', function () {
         var request = gapi.client.oauth2.userinfo.get({
@@ -32,7 +31,7 @@ function onSuccess(googleUser) {
         request.execute(function (resp) {
             // Display the user details
             var profileHTML = '<h3>Welcome '+resp.given_name+'! <a href="javascript:void(0);" onclick="signOut();">Sign out</a></h3>';
-            profileHTML += '<img src="'+resp.picture+'"/><p><b>Google ID: </b>'+resp.id+'</p><p><b>Name: </b>'+resp.name+'</p><p><b>Email: </b>'+resp.email+'</p><p><b>Gender: </b>'+resp.gender+'</p><p><b>Locale: </b>'+resp.locale+'</p><p><b>Google Profile:</b> <a target="_blank" href="'+resp.link+'">click to view profile</a></p>';
+            profileHTML += '<img src="'+resp.picture+'"/><p><b>Google ID: </b>'+resp.id+'</p><p><b>Name: </b>'+resp.name+'</p><p><b>Email: </b>'+resp.email+'</p>';
             document.getElementsByClassName("userContent")[0].innerHTML = profileHTML;
             
             document.getElementById("gSignIn").style.display = "none";
