--- a/web-page/ratchaneegorn-webpage/login.html
+++ b/web-page/ratchaneegorn-webpage/login.html
@@ -1,44 +1,96 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ปฏิทินวันทำการ-ระบบนัดหมายหน่วยปฐมภูมินักศึกษา123 มหาวิทยาลัยขอนแก่น</title>
+    <title>ระบบนัดหมายหน่วยปฐมภูมินักศึกษา123 มหาวิทยาลัยขอนแก่น</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/styleresponsive.css">
-    <link href="https://fonts.googleapis.com/css2?family=Mitr&family=Prompt&display=swap" rel="stylesheet">
-    <meta name="google-signin-scope" content="profile email">
+    <script src="https://apis.google.com/js/client:platform.js?onload=renderButton" async defer></script>
     <meta name="google-signin-client_id"
-        content="494116721931-1phffkjv5fbhcj0iti17ijuhckkb1uve.apps.googleusercontent.com">
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-</head>
-
-<body>
-    <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+        content="331764559247-ftcl715nc9aer5fipkjg1k638539pbg3.apps.googleusercontent.com">
     <script>
-        function onSignIn(googleUser) {
-            // Useful data for your client-side scripts:
-            var profile = googleUser.getBasicProfile();
-            console.log('User sign in');
-            console.log("ID: " + profile.getId()); // Don't send this directly to your server!
-            console.log('Full Name: ' + profile.getName());
-            console.log("Email: " + profile.getEmail());
-
-            // The ID token you need to pass to your backend:
-            var id_token = googleUser.getAuthResponse().id_token;
-            console.log("ID Token: " + id_token);
+        // Render Google Sign-in button
+        function renderButton() {
+            gapi.signin2.render('gSignIn', {
+                'scope': 'profile email',
+                'width': 240,
+                'height': 50,
+                'longtitle': true,
+                'theme': 'dark',
+                'onsuccess': onSuccess,
+                'onfailure': onFailure
+            });
         }
-    </script>
-    <button id="logout" href="#" onclick="signOut();">Sign out</button>
-    <script>
+        // Sign-in success callback
+        function onSuccess(googleUser) {
+            // Get the Google profile data (basic)
+            var profile = googleUser.getBasicProfile();
+
+            // Retrieve the Google account data
+            gapi.client.load('oauth2', 'v2', function () {
+                var request = gapi.client.oauth2.userinfo.get({
+                    'userId': 'me'
+                });
+                // request.execute(function (resp) {
+                //     // Display the user details
+                //     var profileHTML = '<h3>Welcome '+resp.given_name+'! <a href="javascript:void(0);" onclick="signOut();">Sign out</a></h3>';
+                //     profileHTML += '<img src="'+resp.picture+'"/><p><b>Google ID: </b>'+resp.id+'</p><p><b>Name: </b>'+resp.name+'</p><p><b>Email: </b>'+resp.email+'</p><p><b>Gender: </b>'+resp.gender+'</p><p><b>Locale: </b>'+resp.locale+'</p><p><b>Google Profile:</b> <a target="_blank" href="'+resp.link+'">click to view profile</a></p>';
+                //     document.getElementsByClassName("userContent")[0].innerHTML = profileHTML;
+
+                //     document.getElementById("gSignIn").style.display = "none";
+                //     document.getElementsByClassName("userContent")[0].style.display = "block";
+                // });
+            });
+        }
+
+        // Sign-in failure callback
+        function onFailure(error) {
+            alert("error! please log in again.");
+        }
+
+        // Sign out the user
         function signOut() {
             var auth2 = gapi.auth2.getAuthInstance();
             auth2.signOut().then(function () {
-                console.log('User signed out.');
+                document.getElementsByClassName("userContent")[0].innerHTML = '';
+                document.getElementsByClassName("userContent")[0].style.display = "none";
+                document.getElementById("gSignIn").style.display = "block";
             });
+
+            auth2.disconnect();
         }
     </script>
-</body>
+    <style>
+        .container {
+            padding: 20px;
+        }
+
+        .userContent {
+            padding: 10px 20px;
+            margin: auto;
+            width: 250px;
+            background-color: #f7f7f7;
+            box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
+                0 2px 10px 0 rgba(0, 0, 0, 0.12);
+        }
+
+        .userContent h3 {
+            font-size: 17px;
+        }
+
+        .userContent p {
+            font-size: 15px;
+        }
+    </style>
+</head>
+<div class="container">
+    <!-- Display Google sign-in button -->
+    <div id="gSignIn"></div>
+
+    <!-- Show the user profile details -->
+    <div class="userContent" style="display: none;"></div>
+</div>
 
 </html>
