--- a/web-page/ratchaneegorn-webpage/menu.html
+++ b/web-page/ratchaneegorn-webpage/menu.html
@@ -18,7 +18,7 @@
         <div class="headText">ระบบนัดหมายหน่วยปฐมภูมินักศึกษา123 มหาวิทยาลัยขอนแก่น</div> 
         <div class="text">กรุณาเลือกทำรายการ</div> 
         <div class="card-container">
-            <div><a class="card-book" href="calendar.html">
+            <div><a class="card-book" href="inform.html">
                 <div><img src="image/calendar.jpg"></div>
                 <div><p id="selectDay">จองคิว</p> </div> </a></div>
             <div><a class="card-check" href="appoint.html" >
