show data on table

--- a/web-page/ratchaneegorn-webpage/inform.html
+++ b/web-page/ratchaneegorn-webpage/inform.html
@@ -21,11 +21,11 @@
         <div class="text">กรอกข้อมูลเบื้องต้น</div>
         <form action="/addevent" class="main-inform" method="POST">
             <div class="information">
-                <div class="check-use">
+                <!-- <div class="check-use">
                     เคยเข้าใช้บริการหน่วยปฐมภูมินักศึกษา :
                     <input id="register" type="radio" name="check" value="no-register"> ไม่เคย
                     <input id="register" type="radio" name="check" value="register"> เคย
-                </div>
+                </div> -->
                 <div>วันและเวลานัดหมาย
                     <label></label><br>
                     <input type="date" name="date" id="date_1">
@@ -52,7 +52,7 @@
                 </div>
                 <div class="id-number">
                     <label>เลขบัตรประชาชน :</label><br>
-                    <input type="number" name="ssn" id="ssn" value="">
+                    <input type="text" name="ssn" id="ssn" value="">
                 </div>
                 <div class="input-name">
 
@@ -87,7 +87,7 @@
                             ก่อนที่จะทำการบันทึกเรียบร้อยแล้ว</p>
                     </div>
                     <div class="except">
-                        <input type="submit" id="except-button" class="hover-button" style="color: white;">ส่งข้อมูล</input>
+                        <input type="submit" id="except-button" class="hover-button" style="color: white;"></input>
                     </div>
                 </div>
             </div>
