--- a/web-page/ratchaneegorn-webpage/menu.html
+++ b/web-page/ratchaneegorn-webpage/menu.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ระบบนัดหมายหน่วยปฐมภูมินักศึกษา123 มหาวิทยาลัยขอนแก่น</title>
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/styleresponsive.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleresponsive.css">
     <link href="https://fonts.googleapis.com/css2?family=Mitr&family=Prompt&display=swap" rel="stylesheet">
     
 </head>
