--- a/web-page/ratchaneegorn-webpage/inform.html
+++ b/web-page/ratchaneegorn-webpage/inform.html
@@ -77,7 +77,7 @@
                 <div class="certificate">
                     ต้องการใบรับรองแพทย์หรือไม่ :
                     <input id="certify" type="radio" name="certify" value="yes"> ใช่
-                    <input id="certify" type="radio" name="certify" value="no-certify"> ไม่ใช่
+                    <input id="certify" type="radio" name="certify" value="no"> ไม่ใช่
                 </div>
                 <div class="verify">
                     <div>
@@ -109,7 +109,7 @@
             var place = document.getElementById('place').value;
             // console.log(displayRadioValue() + " วันที่: " + date + " เวลา: " + selectTime + " สถานที่: " + place + " id: " + personid + " name: " + fname + "  " + lname + " อาการ: " + textarea
             //     + displayCertify());
-            let table = document.createElement("table")
+            // let table = document.createElement("table")
             document.body.appendChild(table);
             
         }
