--- a/web-page/ratchaneegorn-webpage/map.html
+++ b/web-page/ratchaneegorn-webpage/map.html
@@ -14,7 +14,7 @@
 <body>
     <p id="lanChange">TH|EN</p>
     <div class="user-action">
-        <button id="login">Sign in</button>
+        <!-- <button id="login">Sign in</button> -->
         <button id="logout">Sign Out</button>
     </div>
     <div id="container">
@@ -28,7 +28,7 @@
                     <option value="2">หน่วยปฐมภูมิที่ 2 หอแปดหลัง</option>
                     <option value="3">หน่วยปฐมภูมิที่ 3 บึงศรีฐาน</option>
                 </select>
-                <button id="back-bt" style="color: white;" href="appoint.html">กลับ</button>
+                <a id="back-btn" style="color: white;" href="menu.html">กลับ</a>
             </div>
         </div>
         <script>
